--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0"
   }
 }
